--- a/app/src/main/res/layout/item_local_music.xml
+++ b/app/src/main/res/layout/item_local_music.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
+    android:layout_margin="4dp"
+    android:foreground="?selectableItemBackground"
     app:cardCornerRadius="4dp"
     app:cardElevation="2dp">
 
@@ -43,12 +42,12 @@
             android:id="@+id/local_music_img"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:visibility="gone"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp" />
+            android:layout_marginStart="15dp"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
