--- a/app/src/main/res/layout/activity_music_play_activivy.xml
+++ b/app/src/main/res/layout/activity_music_play_activivy.xml
@@ -44,12 +44,12 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_alignParentTop="true"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/music_logo"
+                android:layout_above="@+id/linearLayout2"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="55dp"
-                android:src="@drawable/music_logo" />
+                android:layout_marginBottom="96dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,7 +58,8 @@
                 android:layout_alignEnd="@+id/linearLayout"
                 android:layout_alignRight="@+id/linearLayout"
                 android:layout_marginLeft="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:id="@+id/linearLayout2">
 
                 <TextView
                     android:id="@+id/tvStart"
@@ -68,7 +69,7 @@
 
                 <SeekBar
                     android:id="@+id/pro_len"
-                    android:layout_width="308dp"
+                    android:layout_width="291dp"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/linearLayout"
                     android:layout_alignParentLeft="true"
@@ -108,7 +109,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="onButtonClick"
                     android:text="暂停/播放" />
 
                 <Button
