--- a/app/src/main/res/layout/activity_music_play_activivy.xml
+++ b/app/src/main/res/layout/activity_music_play_activivy.xml
@@ -46,20 +46,20 @@
                 android:id="@+id/imageView3"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/music_logo"
                 android:layout_above="@+id/linearLayout2"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="96dp" />
+                android:layout_marginBottom="96dp"
+                android:src="@drawable/music_logo" />
 
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/linearLayout"
                 android:layout_alignEnd="@+id/linearLayout"
                 android:layout_alignRight="@+id/linearLayout"
                 android:layout_marginLeft="5dp"
-                android:orientation="horizontal"
-                android:id="@+id/linearLayout2">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvStart"
@@ -69,16 +69,15 @@
 
                 <SeekBar
                     android:id="@+id/pro_len"
-                    android:layout_width="291dp"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/linearLayout"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:max="100"
-                    android:progress="60" />
+                    android:max="100" />
 
                 <TextView
-                    android:id="@+id/TVeND"
+                    android:id="@+id/tvEnd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="结束" />
@@ -109,7 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="暂停/播放" />
+                    android:text="播放" />
 
                 <Button
                     android:id="@+id/btnNext"
@@ -125,6 +124,21 @@
                     android:layout_weight="1"
                     android:text="喜欢" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvMusicNmae"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/tvAuthorName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvMusicNmae"
+                android:layout_centerHorizontal="true" />
 
 
         </RelativeLayout>
